# docs/swagger.yaml
@@ -1,4 +1,57 @@
 definitions:
+  jwtmodel.UserClaims:
+    properties:
+      id:
+        type: integer
+      iss:
+        type: string
+      realm:
+        type: string
+      roles:
+        items:
+          type: object
+        type: array
+      sub:
+        type: string
+    type: object
+  models.User:
+    properties:
+      active:
+        type: boolean
+      createdAt:
+        type: string
+      deleted_at:
+        type: string
+      email:
+        type: string
+      email_checked:
+        type: boolean
+      id:
+        type: integer
+      last_login:
+        type: string
+      phone:
+        type: string
+      phone_checked:
+        type: boolean
+      updated_at:
+        type: string
+      user_type:
+        type: integer
+      username:
+        type: string
+    type: object
+  models.UserProfile:
+    properties:
+      createdAt:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: integer
+      updated_at:
+        type: string
+    type: object
   vo.Common:
     properties:
       message:
@@ -30,6 +83,27 @@ definitions:
       token:
         example: asdsadasdasdasd
         type: string
+    type: object
+  vo.UserData:
+    properties:
+      claims:
+        $ref: '#/definitions/jwtmodel.UserClaims'
+        type: object
+      message:
+        example: unauthorized
+        type: string
+      profile:
+        $ref: '#/definitions/models.UserProfile'
+        type: object
+      status:
+        example: 401
+        type: integer
+      timestamp:
+        example: "2048-05-06 12:34:56"
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+        type: object
     type: object
 info:
   contact:
@@ -134,4 +208,59 @@ paths:
           schema:
             type: string
       summary: 新增文章标签
+  /api/v1/user/info:
+    get:
+      description: 获取用户信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 正常业务处理
+          schema:
+            $ref: '#/definitions/vo.UserData'
+        "401":
+          description: 未验证
+          schema:
+            $ref: '#/definitions/vo.Common'
+      summary: 获取用户信息
+  /api/v1/user/reset_password:
+    post:
+      consumes:
+      - application/json
+      description: 用户自行修改密码
+      parameters:
+      - description: 原始密码
+        in: body
+        name: old_password
+        required: true
+        schema:
+          type: string
+      - description: 新密码，最小长度3 最大长度20
+        in: body
+        name: new_password
+        required: true
+        schema:
+          type: string
+      - description: 重新输入密码
+        in: body
+        name: confirm_password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 正常业务处理
+          schema:
+            $ref: '#/definitions/vo.Common'
+        "401":
+          description: 未验证
+          schema:
+            $ref: '#/definitions/vo.Common'
+        "422":
+          description: 表单绑定失败
+          schema:
+            $ref: '#/definitions/vo.Common'
+      summary: 修改密码
 swagger: "2.0"
